added content to homepage including custom font and upload images

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Fondamento:ital@0;1&family=Gilda+Display&family=Laila:wght@300;400&family=Macondo&family=Montez&family=Pirata+One&family=WindSong:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Laila:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/src/styles.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -22,6 +32,21 @@
     ></script>
   </head>
   <body>
-    <h1>Welcome</h1>
+    <div class="container-homepage">
+      <h1>The Daevabad Trilogy</h1>
+      <p>
+        Step into The City of Brass, the spellbinding debut from S. A.
+        Chakraborty, first book in the Daevabad Trilogy, in which the future of
+        a magical Middle Eastern kingdom rests in the hands of a clever and
+        defiant young con artist with miraculous healing gifts.
+      </p>
+      <div class="pages">
+        <a href="/book 1.html">book 1</a>
+        <a href="/book 2.html">book 2</a>
+        <a href="/book 3.html">book 3</a>
+        <a href="/book 4.html">book 4</a>
+        <a href="/author.html">about the author</a>
+      </div>
+    </div>
   </body>
 </html>
