added footer content and styling

--- a/index.html
+++ b/index.html
@@ -47,6 +47,29 @@
         <a href="/book 4.html">book 4</a>
         <a href="/author.html">about the author</a>
       </div>
+
+      <footer>
+        <a
+          href="https://github.com/taegen-seto"
+          target="_blank"
+          title="github profile"
+          >coded by Taegen Seto</a
+        >
+        🖤
+        <a
+          href="https://github.com/taegen-seto/project-thedaevabadtrilogy"
+          target="_blank"
+          title="github repository"
+          >open sourced on Github</a
+        >
+        🐈‍⬛
+        <a
+          href="https://astonishing-lollipop.netlify.app/"
+          target="_blank"
+          title="netlify link"
+          >hosted on Netlify</a
+        >
+      </footer>
     </div>
   </body>
 </html>
