made homepage mobile responsive

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="/author.html">about the author</a>
       </div>
 
-      <footer>
+      <footer class="d-none d-md-block">
         <a
           href="https://github.com/taegen-seto"
           target="_blank"
