add navbar - replace links - add first sub page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,47 @@
     ></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">The Daevabad Trilogy |</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <!-- <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="/book1.html" title="book 1">Book 1</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/book2.html" title="book 2">Book 2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/book3.html" title="book 3">Book 3</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/book4.html" title="book 4">Book 4</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/author.html" title="about the author"
+                >About the Author</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="container-homepage">
       <h1>The Daevabad Trilogy</h1>
       <p>
@@ -40,12 +81,35 @@
         a magical Middle Eastern kingdom rests in the hands of a clever and
         defiant young con artist with miraculous healing gifts.
       </p>
-      <div class="pages">
-        <a href="/book 1.html">book 1</a>
-        <a href="/book 2.html">book 2</a>
-        <a href="/book 3.html">book 3</a>
-        <a href="/book 4.html">book 4</a>
-        <a href="/author.html">about the author</a>
+
+      <div class="external-links">
+        <a
+          href="https://www.goodreads.com/series/211584-the-daevabad-trilogy"
+          target="_blank"
+          title="goodreads icon"
+        >
+          <img src="images/GoodreadsIcon.png" alt="goodreads icon" />
+        </a>
+        <a
+          href="https://www.goodreads.com/series/211584-the-daevabad-trilogy"
+          target="_blank"
+          title="goodreads link"
+          >view on Goodreads</a
+        >
+
+        <a
+          href="https://www.amazon.com.au/The-Daevabad-Trilogy/dp/B07P61V629"
+          target="_blank"
+          title="trilogy on Amazon"
+        >
+          <img src="/images/AmazonIcon.png" alt="amazon icon" />
+        </a>
+        <a
+          href="https://www.amazon.com.au/The-Daevabad-Trilogy/dp/B07P61V629"
+          target="_blank"
+          title="amazon link"
+          >view on Amazon</a
+        >
       </div>
 
       <footer class="d-none d-md-block">
