--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">The Daevabad Trilogy |</a>
+        <a class="navbar-brand" href="/">The Daevabad Trilogy |</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -48,9 +48,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li> -->
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="/book1.html" title="book 1">Book 1</a>
             </li>
@@ -75,7 +75,7 @@
 
     <div class="container-homepage">
       <h1>The Daevabad Trilogy</h1>
-      <p>
+      <p class="intro">
         Step into The City of Brass, the spellbinding debut from S. A.
         Chakraborty, first book in the Daevabad Trilogy, in which the future of
         a magical Middle Eastern kingdom rests in the hands of a clever and
@@ -88,7 +88,11 @@
           target="_blank"
           title="goodreads icon"
         >
-          <img src="images/GoodreadsIcon.png" alt="goodreads icon" />
+          <img
+            src="images/GoodreadsIcon.png"
+            alt="goodreads icon"
+            class="icon"
+          />
         </a>
         <a
           href="https://www.goodreads.com/series/211584-the-daevabad-trilogy"
@@ -102,7 +106,7 @@
           target="_blank"
           title="trilogy on Amazon"
         >
-          <img src="/images/AmazonIcon.png" alt="amazon icon" />
+          <img src="/images/AmazonIcon.png" alt="amazon icon" class="icon" />
         </a>
         <a
           href="https://www.amazon.com.au/The-Daevabad-Trilogy/dp/B07P61V629"
