--- a/book1.html
+++ b/book1.html
@@ -75,81 +75,65 @@
 
     <div class="container-book1">
       <h1>The City of Brass</h1>
-    
 
       <div class="row">
         <div class="col-sm-4">
-<img src="/images/TDT-book1.jpg" alt="book 1 img" class="book-cover">
+          <img
+            src="/images/TDT-book1.jpg"
+            alt="book 1 img"
+            class="book-cover"
+          />
         </div>
-<div class="col-sm-8">
-      <p class="synopsis">
-          <h2>Book 1 in The Daevabad Trilogy</h2>
-        
-        Nahri has never believed in magic. Certainly, she has power; on the
-        streets of 18th century Cairo, she's a con woman of unsurpassed talent.
-        But she knows better than anyone that the trade she uses to get by—palm
-        readings, zars and a mysterious gift for healing—are all tricks; both
-        the means to the delightful end of swindling unwitting Ottoman nobles
-        and a reliable way to survive. 
-        <br />
-        <br>
-        But when Nahri accidentally summons
-        Dara, an equally sly, darkly mysterious djinn warrior to her side during
-        one of her cons, she's forced to reconsider her beliefs. For Dara tells
-        Nahri an extraordinary tale: across hot, windswept sands teeming with
-        creatures of fire and rivers where the mythical marid sleep, past ruins
-        of once-magnificent human metropolises and mountains where the circling
-        hawks are not what they seem, lies Daevabad, the legendary city of
-        brass—a city to which Nahri is irrevocably bound. 
-        <br />
-<br>
-        In Daevabad, within gilded brass walls laced with enchantments and
-        behind the six gates of the six djinn tribes, old resentments run deep.
-        And when Nahri decides to enter this world, her arrival threatens to
-        ignite a war that has been simmering for centuries. 
-        <br />
-<br>
-        Spurning Dara's warning of the treachery surrounding her, she embarks on
-        a hesitant friendship with Alizayd, an idealistic prince who dreams of
-        revolutionizing his father's corrupt regime. All too soon, Nahri learns
-        that true power is fierce and brutal. That magic cannot shield her from
-        the dangerous web of court politics. That even the cleverest of schemes
-        can have deadly consequences. 
-        <br />
-<br>
-        After all, there is a reason they say to be careful what you wish for...
-      </p>
-      </div>
- </div>
-    <div class="external-links">
-      <a
-        href="https://www.goodreads.com/series/211584-the-daevabad-trilogy"
-        target="_blank"
-        title="goodreads icon"
-      >
-        <img src="images/GoodreadsIcon.png" alt="goodreads icon" class="icon"/>
-      </a>
-      <a
-        href="https://www.goodreads.com/series/211584-the-daevabad-trilogy"
-        target="_blank"
-        title="goodreads link"
-        >view on Goodreads</a
-      >
+        <div class="col-sm-8">
+          <p class="synopsis">
+            <span class="sub-heading1">Book 1 in The Daevabad Trilogy</span>
 
-      <a
-        href="https://www.amazon.com.au/The-Daevabad-Trilogy/dp/B07P61V629"
-        target="_blank"
-        title="trilogy on Amazon"
-      >
-        <img src="/images/AmazonIcon.png" alt="amazon icon" class="icon"/>
-      </a>
-      <a
-        href="https://www.amazon.com.au/The-Daevabad-Trilogy/dp/B07P61V629"
-        target="_blank"
-        title="amazon link"
-        >view on Amazon</a
-      >
-    </div>
+            <br /><br />
+            Nahri has never believed in magic. Certainly, she has power; on the
+            streets of 18th century Cairo, she's a con woman of unsurpassed
+            talent. But she knows better than anyone that the trade she uses to
+            get by—palm readings, zars and a mysterious gift for healing—are all
+            tricks; both the means to the delightful end of swindling unwitting
+            Ottoman nobles and a reliable way to survive.
+            <br />
+            <br />
+            But when Nahri accidentally summons Dara, an equally sly, darkly
+            mysterious djinn warrior to her side during one of her cons, she's
+            forced to reconsider her beliefs. For Dara tells Nahri an
+            extraordinary tale: across hot, windswept sands teeming with
+            creatures of fire and rivers where the mythical marid sleep, past
+            ruins of once-magnificent human metropolises and mountains where the
+            circling hawks are not what they seem, lies Daevabad, the legendary
+            city of brass—a city to which Nahri is irrevocably bound.
+            <br />
+            <br />
+            In Daevabad, within gilded brass walls laced with enchantments and
+            behind the six gates of the six djinn tribes, old resentments run
+            deep. And when Nahri decides to enter this world, her arrival
+            threatens to ignite a war that has been simmering for centuries.
+            <br />
+            <br />
+            Spurning Dara's warning of the treachery surrounding her, she
+            embarks on a hesitant friendship with Alizayd, an idealistic prince
+            who dreams of revolutionizing his father's corrupt regime. All too
+            soon, Nahri learns that true power is fierce and brutal. That magic
+            cannot shield her from the dangerous web of court politics. That
+            even the cleverest of schemes can have deadly consequences.
+            <br />
+            <br />
+            After all, there is a reason they say to be careful what you wish
+            for...
+          </p>
+        </div>
+        <div class="col-sm-6"></div>
+        <div class="col-sm-6">
+          <img
+            src="/images/apothecary.jpeg"
+            alt="apothecary"
+            class="secondary-image"
+          />
+        </div>
+      </div>
     </div>
   </body>
 </html>
