created book 4 sub page and style + author page incl install font awesome

--- a/book1.html
+++ b/book1.html
@@ -73,7 +73,7 @@
       </div>
     </nav>
 
-    <div class="container-book1">
+    <div class="sub-container">
       <h1>The City of Brass</h1>
 
       <div class="row">
