--- a/book4.html
+++ b/book4.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Book 3 in The Daevabad Trilogy - The Empire of Gold"
+      content="Book 4 in The Daevabad Trilogy - The River of Silver"
     />
-    <title>The Daevabad Trilogy - Book 3 - The Empire of Gold</title>
+    <title>The Daevabad Trilogy - Book 4 - The River of Silver</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -74,66 +74,50 @@
     </nav>
 
     <div class="sub-container">
-      <h1>The Empire of Gold</h1>
+      <h1>The River of Silver</h1>
 
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="/images/TDT-book3.jpg"
-            alt="book 3 img"
+            src="/images/TDT-book4.jpg"
+            alt="book 4 img"
             class="book-cover"
           />
         </div>
         <div class="col-sm-8">
           <p class="synopsis">
-            <span class="sub-heading3">Book 3 in The Daevabad Trilogy</span>
-
             <br /><br />
+            <span class="sub-heading4">A companion novel</span>
 
-            Daevabad has fallen.
-            <br />
-            <br />
-            After a brutal conquest stripped the city of its magic, Nahid leader
-            Banu Manizheh and her resurrected commander, Dara, must try to
-            repair their fraying alliance and stabilize a fractious, warring
-            people.
-            <br />
-            <br />
-            But the bloodletting and loss of his beloved Nahri have unleashed
-            the worst demons of Dara's dark past. To vanquish them, he must face
-            some ugly truths about his history and put himself at the mercy of
-            those he once considered enemies.
-            <br />
-            <br />
-            Having narrowly escaped their murderous families and Daevabad's
-            deadly politics, Nahri and Ali, now safe in Cairo, face difficult
-            choices of their own. While Nahri finds peace in the old rhythms and
-            familiar comforts of her human home, she is haunted by the knowledge
-            that the loved ones she left behind and the people who considered
-            her a savior are at the mercy of a new tyrant. Ali, too, cannot help
-            but look back, and is determined to return to rescue his city and
-            the family that remains. Seeking support in his mother's homeland,
-            he discovers that his connection to the marid goes far deeper than
-            expected and threatens not only his relationship with Nahri, but his
-            very faith.
-            <br />
-            <br />
-            As peace grows more elusive and old players return, Nahri, Ali, and
-            Dara come to understand that in order to remake the world, they may
-            need to fight those they once loved . . . and take a stand for those
-            they once hurt.
+            <br /><br /><br />
+
+            A prospective new queen joins a court whose lethal history may
+            overwhelm her own political savvy...
+            <br /><br />
+            An imprisoned royal from a fallen dynasty and a woman wrenched from
+            her home cross paths in an enchanted garden...
+            <br /><br />
+            A pair of scouts stumble upon a secret in a cursed winter wood that
+            will turn over their world...
+            <br /><br /><br />
+            <strong
+              >Listen to their stories and more in a collection of tales that
+              returns to Daevabad and gives voice to new characters and old.
+              From Manizheh's first steps toward rebellion to new adventures
+              being embarked upon after The Empire of Gold ends, The River of
+              Silver is the perfect complement to Chakraborty's incredible
+              trilogy.</strong
+            >
           </p>
         </div>
-        <div class="col-sm-1"></div>
-        <div class="col-sm-6">
+        <div class="col-sm-2"></div>
+
+        <div class="col-sm-10">
           <img
-            src="/images/city-burning.webp"
-            alt="city burning"
+            src="/images/city-wall.jpeg"
+            alt="djinn"
             class="secondary-image"
           />
-        </div>
-        <div class="col-sm-5">
-          <img src="/images/djinn.jpg" alt="djinn" class="secondary-image" />
         </div>
       </div>
     </div>
