--- a/book2.html
+++ b/book2.html
@@ -73,7 +73,7 @@
       </div>
     </nav>
 
-    <div class="container-book1">
+    <div class="sub-container">
       <h1>The Kingdom of Copper</h1>
 
       <div class="row">
