add SEO content

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Take a peek inside the world of The Daevabad Trilogy - an adult fantasy book series written by SA Chakraborty"
+      content="Take a peek inside the world of The Daevabad Trilogy - an adult fantasy book series written by S. A. Chakraborty"
     />
-    <title>🧞‍♀️ The Daevabad Trilogy</title>
+    <title>🧞‍♀️ The Daevabad Trilogy - book series</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,7 +34,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">The Daevabad Trilogy |</a>
+        <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,7 +49,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/book1.html" title="book 1">Book 1</a>
