--- a/author.html
+++ b/author.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="The Daevabad Trilogy - About the Author"
+      content="The Daevabad Trilogy - About the Author S. A. Chakraborty"
     />
     <title>The Daevabad Trilogy - About the Author</title>
     <link
@@ -38,7 +38,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">The Daevabad Trilogy |</a>
+        <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -53,7 +53,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/" title="homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/book1.html" title="book 1">Book 1</a>
@@ -68,7 +70,10 @@
               <a class="nav-link" href="/book4.html" title="book 4">Book 4</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/author.html" title="about the author"
+              <a
+                class="nav-link active"
+                href="/author.html"
+                title="about the author"
                 >About the Author</a
               >
             </li>
