--- a/book1.html
+++ b/book1.html
@@ -34,7 +34,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">The Daevabad Trilogy |</a>
+        <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,10 +49,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/" title="homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/book1.html" title="book 1">Book 1</a>
+              <a class="nav-link active" href="/book1.html" title="book 1"
+                >Book 1</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/book2.html" title="book 2">Book 2</a>
