author page - mobile responsive

--- a/author.html
+++ b/author.html
@@ -85,11 +85,18 @@
     <div class="sub-container">
       <h2>About the Author</h2>
 
+      <div class="col-sm-3">
+        <img
+          src="/images/author-headshot.jpeg"
+          alt="author headshot"
+          class="book-cover d-block d-sm-none"
+        />
+      </div>
+
       <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-7">
           <p class="synopsis">
-            <br /><br />
             <span class="sub-heading5">S. A. Chakraborty</span>
 
             <br /><br />
@@ -114,7 +121,7 @@
           <img
             src="/images/author-headshot.jpeg"
             alt="author headshot"
-            class="book-cover"
+            class="book-cover d-none d-sm-block"
           />
         </div>
         <div class="col-sm-1"></div>
@@ -129,14 +136,14 @@
         </div>
         <div class="col-sm-7">
           <p class="synopsis">
-            <span class="sub-heading5">New series from S. A. Chakraborty </span>
+            <span class="sub-heading5">New series! </span>
             <br /><br />
             <strong
               >Amina al-Sirafi Series
               <br />
               Set to be another trilogy from Chakraborty, the first book was
-              released February 2023 with no set dates for the release of books
-              2 and 3.
+              released February 2023 with no set release dates for books 2 and
+              3.
             </strong>
             <br /><br />
             Amina al-Sirafi should be content. After a storied and scandalous
@@ -167,7 +174,7 @@
               title="author's instagram"
               >Shannon on Instagram
             </a>
-
+            <br />
             <i class="icon fa-solid fa-desktop"></i>
             <a href="https://www.sachakraborty.com/" title="author's website"
               >visit the author's website</a
