modify background styling and tidy code

--- a/book1.html
+++ b/book1.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="body-book-pages">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
@@ -76,7 +76,6 @@
         </div>
       </div>
     </nav>
-
     <div class="sub-container">
       <h2>The City of Brass</h2>
 
@@ -91,8 +90,8 @@
         <div class="col-sm-8">
           <p class="synopsis">
             <span class="sub-heading1">Book 1 in The Daevabad Trilogy</span>
-
-            <br /><br />
+            <br />
+            <br />
             Nahri has never believed in magic. Certainly, she has power; on the
             streets of 18th century Cairo, she's a con woman of unsurpassed
             talent. But she knows better than anyone that the trade she uses to
