--- a/book4.html
+++ b/book4.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="body-book-pages">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
@@ -76,10 +76,8 @@
         </div>
       </div>
     </nav>
-
     <div class="sub-container">
       <h2>The River of Silver</h2>
-
       <div class="row">
         <div class="col-sm-4">
           <img
@@ -92,9 +90,8 @@
           <p class="synopsis">
             <br />
             <span class="sub-heading4">A companion novel</span>
-
-            <br /><br />
-
+            <br />
+            <br />
             A prospective new queen joins a court whose lethal history may
             overwhelm her own political savvy...
             <br /><br />
@@ -115,7 +112,6 @@
           </p>
         </div>
         <div class="col-sm-2"></div>
-
         <div class="col-sm-10">
           <img
             src="/images/city-wall.jpeg"
