--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="body-home">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
@@ -78,7 +78,6 @@
         </div>
       </div>
     </nav>
-
     <div class="container-homepage">
       <h1>The Daevabad Trilogy</h1>
       <p class="intro">
@@ -87,7 +86,6 @@
         a magical Middle Eastern kingdom rests in the hands of a clever and
         defiant young con artist with miraculous healing gifts.
       </p>
-
       <div class="external-links">
         <a
           href="https://www.goodreads.com/series/211584-the-daevabad-trilogy"
@@ -106,7 +104,6 @@
           title="goodreads link"
           >view on Goodreads</a
         >
-
         <a
           href="https://www.amazon.com.au/The-Daevabad-Trilogy/dp/B07P61V629"
           target="_blank"
@@ -121,7 +118,6 @@
           >view on Amazon</a
         >
       </div>
-
       <footer class="d-none d-md-block">
         <a
           href="https://github.com/taegen-seto"
