--- a/author.html
+++ b/author.html
@@ -35,7 +35,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="body-home">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
@@ -81,10 +81,8 @@
         </div>
       </div>
     </nav>
-
     <div class="sub-container">
       <h2>About the Author</h2>
-
       <div class="col-sm-3">
         <img
           src="/images/author-headshot.jpeg"
@@ -92,26 +90,28 @@
           class="book-cover d-block d-sm-none"
         />
       </div>
-
       <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-7">
           <p class="synopsis">
             <span class="sub-heading5">S. A. Chakraborty</span>
-
-            <br /><br />
+            <br />
+            <br />
             Shannon Chakraborty is the critically acclaimed, New York Times
             bestselling author of The Daevabad Trilogy and The Adventures of
             Amina al-Sirafi.
-            <br /><br />
+            <br />
+            <br />
             Her work has been translated into over a dozen languages and
             nominated for the Hugo, Locus, World Fantasy, Crawford, and
             Astounding awards.
-            <br /><br />
+            <br />
+            <br />
             You can find her online at www.sachakraborty.com or on Instagram and
             Twitter at @SAChakrabooks, where she likes to talk about history,
             cooking, and Islamic art.
-            <br /><br />
+            <br />
+            <br />
             She lives in New Jersey with her family and an ever-increasing
             number of cats.
           </p>
@@ -125,7 +125,6 @@
           />
         </div>
         <div class="col-sm-1"></div>
-
         <div class="col-sm-1"></div>
         <div class="col-sm-4">
           <img
@@ -137,7 +136,8 @@
         <div class="col-sm-7">
           <p class="synopsis">
             <span class="sub-heading5">New series! </span>
-            <br /><br />
+            <br />
+            <br />
             <strong
               >Amina al-Sirafi Series
               <br />
@@ -145,38 +145,45 @@
               released February 2023 with no set release dates for books 2 and
               3.
             </strong>
-            <br /><br />
+            <br />
+            <br />
             Amina al-Sirafi should be content. After a storied and scandalous
             career as one of the Indian Ocean's most notorious pirates, she's
             survived backstabbing rogues, vengeful merchant princes, several
             husbands, and one actual demon to retire peacefully with her family
             to a life of piety, motherhood, and absolutely nothing that hints of
             the supernatural.
-            <br /><br />
+            <br />
+            <br />
             But when she's tracked down by the obscenely wealthy mother of a
             former crewman, she's offered a job no bandit could refuse: retrieve
             her comrade's kidnapped daughter for a kingly sum. The chance to
             have one last adventure with her crew, do right by an old friend,
             and win a fortune that will secure her family's future forever? It
             seems like such an obvious choice that it must be God's will.
-            <br /><br />
+            <br />
+            <br />
             Yet the deeper Amina dives, the more it becomes alarmingly clear
             there's more to this job, and the girl's disappearance, than she was
             led to believe. For there's always risk in wanting to become a
             legend, to seize one last chance at glory, to savor just a bit more
             power…and the price might be your very soul.
           </p>
-
           <div class="author-links">
             <i class="icon fa-brands fa-instagram"></i>
             <a
               href="https://www.instagram.com/sachakrabooks/"
+              target="_blank"
               title="author's instagram"
               >Shannon on Instagram
             </a>
             <br />
+            <br />
             <i class="icon fa-solid fa-desktop"></i>
-            <a href="https://www.sachakraborty.com/" title="author's website"
+            <a
+              href="https://www.sachakraborty.com/"
+              target="_blank"
+              title="author's website"
               >visit the author's website</a
             >
           </div>
