--- a/book2.html
+++ b/book2.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="body-book-pages">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
@@ -76,10 +76,8 @@
         </div>
       </div>
     </nav>
-
     <div class="sub-container">
       <h2>The Kingdom of Copper</h2>
-
       <div class="row">
         <div class="col-sm-4">
           <img
@@ -91,8 +89,8 @@
         <div class="col-sm-8">
           <p class="synopsis">
             <span class="sub-heading2">Book 2 in The Daevabad Trilogy</span>
-
-            <br /><br />
+            <br />
+            <br />
             Nahri's life changed forever the moment she accidentally summoned
             Dara, a formidable, mysterious djinn, during one of her schemes.
             Whisked from her home in Cairo, she was thrust into the dazzling
