--- a/book3.html
+++ b/book3.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="body-book-pages">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
@@ -76,10 +76,8 @@
         </div>
       </div>
     </nav>
-
     <div class="sub-container">
       <h2>The Empire of Gold</h2>
-
       <div class="row">
         <div class="col-sm-4">
           <img
@@ -91,9 +89,8 @@
         <div class="col-sm-8">
           <p class="synopsis">
             <span class="sub-heading3">Book 3 in The Daevabad Trilogy</span>
-
-            <br /><br />
-
+            <br />
+            <br />
             Daevabad has fallen.
             <br />
             <br />
