--- a/author.html
+++ b/author.html
@@ -35,10 +35,10 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="body-home">
+  <body class="body-homepage">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
+        <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy</a>
         <button
           class="navbar-toggler"
           type="button"
