--- a/book1.html
+++ b/book1.html
@@ -34,7 +34,7 @@
   <body class="body-book-pages">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy |</a>
+        <a class="navbar-brand" href="/" title="home">The Daevabad Trilogy</a>
         <button
           class="navbar-toggler"
           type="button"
