--- a/author.html
+++ b/author.html
@@ -93,7 +93,8 @@
       <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-7">
-          <p class="synopsis">
+          <p class="author-content">
+            <br />
             <span class="sub-heading5">S. A. Chakraborty</span>
             <br />
             <br />
@@ -134,16 +135,14 @@
           />
         </div>
         <div class="col-sm-7">
-          <p class="synopsis">
-            <span class="sub-heading5">New series! </span>
+          <p class="author-content">
+            <span class="sub-heading5">Amina al-Sirafi Series </span>
             <br />
             <br />
-            <strong
-              >Amina al-Sirafi Series
-              <br />
-              Set to be another trilogy from Chakraborty, the first book was
-              released February 2023 with no set release dates for books 2 and
-              3.
+            <strong>
+              Set to be another trilogy from Chakraborty, the first book "The
+              Adventures of Amina al-Sirafi" was released February 2023 with no
+              set release dates for books 2 and 3.
             </strong>
             <br />
             <br />
@@ -169,24 +168,41 @@
             legend, to seize one last chance at glory, to savor just a bit more
             power…and the price might be your very soul.
           </p>
-          <div class="author-links">
-            <i class="icon fa-brands fa-instagram"></i>
-            <a
-              href="https://www.instagram.com/sachakrabooks/"
-              target="_blank"
-              title="author's instagram"
-              >Shannon on Instagram
-            </a>
-            <br />
-            <br />
-            <i class="icon fa-solid fa-desktop"></i>
-            <a
-              href="https://www.sachakraborty.com/"
-              target="_blank"
-              title="author's website"
-              >visit the author's website</a
-            >
-          </div>
+        </div>
+        <div class="author-links-container d-none d-sm-block">
+          <i class="icon fa-brands fa-instagram"></i>
+          <a
+            href="https://www.instagram.com/sachakrabooks/"
+            target="_blank"
+            title="author's instagram"
+            >Shannon on Instagram
+          </a>
+
+          <i class="icon fa-solid fa-desktop"></i>
+          <a
+            href="https://www.sachakraborty.com/"
+            target="_blank"
+            title="author's website"
+            >visit the author's website</a
+          >
+        </div>
+
+        <div class="author-links-container d-block d-sm-none">
+          <i class="icon fa-brands fa-instagram"></i>
+          <a
+            href="https://www.instagram.com/sachakrabooks/"
+            target="_blank"
+            title="author's instagram"
+            >Instagram
+          </a>
+
+          <i class="icon fa-solid fa-desktop"></i>
+          <a
+            href="https://www.sachakraborty.com/"
+            target="_blank"
+            title="author's website"
+            >Website</a
+          >
         </div>
       </div>
     </div>
