--- a/author.html
+++ b/author.html
@@ -183,7 +183,7 @@
             href="https://www.sachakraborty.com/"
             target="_blank"
             title="author's website"
-            >visit the author's website</a
+            >Shannon's Website</a
           >
         </div>
 
@@ -195,7 +195,7 @@
             title="author's instagram"
             >Instagram
           </a>
-
+          <br />
           <i class="icon fa-solid fa-desktop"></i>
           <a
             href="https://www.sachakraborty.com/"
