fix author links

--- a/author.html
+++ b/author.html
@@ -168,39 +168,34 @@
             legend, to seize one last chance at glory, to savor just a bit more
             power…and the price might be your very soul.
           </p>
-        </div>
-        <div class="author-links-container d-none d-sm-block">
-          <i class="icon fa-brands fa-instagram"></i>
-          <a
-            href="https://www.instagram.com/sachakrabooks/"
-            target="_blank"
-            title="author's instagram"
-            >Shannon on Instagram
-          </a>
-          <i class="icon fa-solid fa-desktop"></i>
-          <a
-            href="https://www.sachakraborty.com/"
-            target="_blank"
-            title="author's website"
-            >Shannon's Website</a
-          >
-        </div>
-        <div class="author-links-container d-block d-sm-none">
-          <i class="icon fa-brands fa-instagram"></i>
-          <a
-            href="https://www.instagram.com/sachakrabooks/"
-            target="_blank"
-            title="author's instagram"
-            >Instagram
-          </a>
-          <br />
-          <i class="icon fa-solid fa-desktop"></i>
-          <a
-            href="https://www.sachakraborty.com/"
-            target="_blank"
-            title="author's website"
-            >Website</a
-          >
+          <div class="external-links">
+            <a
+              href="https://www.instagram.com/sachakrabooks/"
+              target="_blank"
+              title="author's instagram"
+            >
+              <i class="icon fa-brands fa-instagram"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/sachakrabooks/"
+              target="_blank"
+              title="author's instagram"
+              >Shannon on Instagram</a
+            >
+            <a
+              href="https://www.sachakraborty.com/"
+              target="_blank"
+              title="author's website"
+            >
+              <i class="icon fa-solid fa-desktop"></i>
+            </a>
+            <a
+              href="https://www.sachakraborty.com/"
+              target="_blank"
+              title="author's website"
+              >Shannon's Website</a
+            >
+          </div>
         </div>
       </div>
     </div>
