--- a/index.html
+++ b/index.html
@@ -90,31 +90,27 @@
         <a
           href="https://www.goodreads.com/series/211584-the-daevabad-trilogy"
           target="_blank"
-          title="goodreads icon"
+          title="goodreads"
         >
-          <img
-            src="images/GoodreadsIcon.png"
-            alt="goodreads icon"
-            class="icon"
-          />
+          <img src="images/GoodreadsIcon.png" alt="goodreads" class="icon" />
         </a>
         <a
           href="https://www.goodreads.com/series/211584-the-daevabad-trilogy"
           target="_blank"
-          title="goodreads link"
+          title="goodreads"
           >view on Goodreads</a
         >
         <a
           href="https://www.amazon.com.au/The-Daevabad-Trilogy/dp/B07P61V629"
           target="_blank"
-          title="trilogy on Amazon"
+          title="amazon"
         >
           <img src="/images/AmazonIcon.png" alt="amazon icon" class="icon" />
         </a>
         <a
           href="https://www.amazon.com.au/The-Daevabad-Trilogy/dp/B07P61V629"
           target="_blank"
-          title="amazon link"
+          title="amazon"
           >view on Amazon</a
         >
       </div>
@@ -136,7 +132,7 @@
         <a
           href="https://astonishing-lollipop.netlify.app/"
           target="_blank"
-          title="netlify link"
+          title="netlify"
           >hosted on Netlify</a
         >
       </footer>
