added "back to top" functionality for mobile devices

--- a/book4.html
+++ b/book4.html
@@ -31,6 +31,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
+  <a name="top"></a>
   <body class="body-book-pages">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -121,5 +122,8 @@
         </div>
       </div>
     </div>
+    <section>
+      <a href="#top" class="back-to-top d-block d-sm-none">back to top</a>
+    </section>
   </body>
 </html>
