--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           >view on Amazon</a
         >
       </div>
-      <footer class="d-none d-md-block">
+      <footer>
         <a
           href="https://github.com/taegen-seto"
           target="_blank"
