--- a/author.html
+++ b/author.html
@@ -35,6 +35,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
+  <a name="top"></a>
   <body class="body-homepage">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -199,5 +200,8 @@
         </div>
       </div>
     </div>
+    <section>
+      <a href="#top" class="back-to-top d-block d-sm-none">back to top</a>
+    </section>
   </body>
 </html>
